fix node alignment

--- a/front/src/app/modules/blueprint/components/builder/builder.component.scss
+++ b/front/src/app/modules/blueprint/components/builder/builder.component.scss
@@ -55,7 +55,8 @@
     border-radius: 5px;
     border: 1px solid #1c57a4;
     opacity: 1;
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     position: absolute;
     cursor: move;
     transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
